Docker tweaks on node and master

--- a/k8s/cloud_init_k8s_node01.cfg
+++ b/k8s/cloud_init_k8s_node01.cfg
@@ -151,7 +151,19 @@ write_files:
     content: |
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
+  - path: /etc/docker/daemon.json
+    content: |
+      {
+        "exec-opts": ["native.cgroupdriver=systemd"],
+        "log-driver": "json-file",
+        "log-opts": {
+          "max-size": "100m"
+        },
+        "storage-driver": "overlay2"
+      }
 runcmd:
+  - systemctl daemon-reload
+  - systemctl restart docker
   - modprobe br_netfilter
   - sysctl --system
   - usermod -a -G docker ubuntu
