--- a/k8s/cloud_init_k8s_master.cfg
+++ b/k8s/cloud_init_k8s_master.cfg
@@ -151,11 +151,29 @@ write_files:
     content: |
       net.bridge.bridge-nf-call-ip6tables = 1
       net.bridge.bridge-nf-call-iptables = 1
+  - path: /etc/docker/daemon.json
+    content: |
+      {
+        "exec-opts": ["native.cgroupdriver=systemd"],
+        "log-driver": "json-file",
+        "log-opts": {
+          "max-size": "100m"
+        },
+        "storage-driver": "overlay2"
+      }
 runcmd:
+  - systemctl daemon-reload
+  - systemctl restart docker
+  - mkdir -p /etc/systemd/system/docker.service.d
   - modprobe br_netfilter
   - sysctl --system
+  - kubeadm init --skip-token-print --pod-network-cidr 10.42.0.0/16 --service-cidr 10.96.0.0/12
+  - kubectl --kubeconfig /etc/kubernetes/admin.conf apply -f /etc/kubernetes/superuser.yaml
+  - kubectl --kubeconfig /etc/kubernetes/admin.conf apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.0.0-beta8/aio/deploy/recommended.yaml
   - usermod -a -G docker ubuntu
   - mkdir /home/ubuntu/.kube
+  - cp /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
+  - chown -R ubuntu:ubuntu /home/ubuntu/.kube
 power_state:
   timeout: 300
   mode: reboot
